import 'package:flutter/material.dart';
import 'package:go_router/go_router.dart';

class BottomNavBar extends StatelessWidget {
  final String currentRoute;

  const BottomNavBar({super.key, required this.currentRoute});

  int _getSelectedIndex() {
    switch (currentRoute) {
      case '/service':
        return 1;
      case '/profile':
        return 2;
      case '/dashboard':
      default:
        return 0;
    }
  }

  void _onItemTapped(int index, BuildContext context) {
    switch (index) {
      case 0:
        context.go('/dashboard');
        break;
      case 1:
        context.go('/service');
        break;
      case 2:
        context.go('/profile');
        break;
    }
  }

  @override
  Widget build(BuildContext context) {
    final selectedIndex = _getSelectedIndex();

    return BottomNavigationBar(
      key: const Key('bottomNavBar'),
      currentIndex: selectedIndex,
      onTap: (index) => _onItemTapped(index, context),
      type: BottomNavigationBarType.fixed,
      selectedItemColor: Theme.of(context).primaryColor,
      unselectedItemColor: Colors.grey,
      items: const [
        BottomNavigationBarItem(
          icon: Icon(key: Key('homeNavBarIcon'), Icons.home),
          label: 'Home',
        ),
        BottomNavigationBarItem(
          icon: Icon(key: Key('serviceNavBarIcon'), Icons.volunteer_activism),
          label: 'Dienste',
        ),
        BottomNavigationBarItem(
          key: Key('profileNavBarIcon'),
          icon: Icon(Icons.person),
          label: 'Profil',
        ),
      ],
    );
  }
}
